[build-system]
requires = ["setuptools>=21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netilion_api"
version = "1.2.1"
authors = [
  { name="Andrey Dodonov", email="Andrey.Dodonov@endress.com" },
]
description = "Client for accessing Netilion cloud"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "six",
    "urllib3",
    "requests_oauthlib"
]
keywords = [
    "Netilion",
    "Cloud",
    "IIoT",
    "Automation",
    "E+H",
    "Endress+Hauser"
]

[project.urls]
"Homepage" = "https://staging-env.netilion.endress.com/"
"API" = "https://api.staging-env.netilion.endress.com/doc/v1/"